<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_short"
        android:icon="@drawable/ic_navigation_youtube_short"
        android:title="@string/title_short" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_navigation_add"
        android:title="" />

    <item
        android:id="@+id/navigation_subscription"
        android:icon="@drawable/ic_navigation_subscription"
        android:title="@string/title_subscription" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/baseline_video_library_24"
        android:title="@string/title_lib" />
</menu>