<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="lat.pam.navigationproject.ui.dashboard"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_short"
        android:name="lat.pam.navigationproject.ui.shorts"
        android:label="@string/title_short"
        tools:layout="@layout/fragment_shorts" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="lat.pam.navigationproject.ui.add"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_subscription"
        android:name="lat.pam.navigationproject.ui.subscription"
        android:label="@string/title_subscription"
        tools:layout="@layout/fragment_subscription" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="lat.pam.navigationproject.ui.account"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>